feat: Add battlelog http rest route with pagination
